Sort by property name in the get all method
