# backend/src/BoilerPlate.Data.DTO/Common/Requests/GetAllRequest.cs
@@ -1,10 +1,9 @@
-using System.ComponentModel;
 using System.Diagnostics.CodeAnalysis;
 using System.Linq.Expressions;
-using MediatR;
 using BoilerPlate.Data.Domain.Entities.Base;
 using BoilerPlate.Data.DTO.Base;
 using BoilerPlate.Data.DTO.Common.Responses;
+using MediatR;
 
 namespace BoilerPlate.Data.DTO.Common.Requests;
 
@@ -18,14 +17,12 @@ public class GetAllRequest<TEntity, TEntityDto> : IRequest<GetAllDto<TEntityDto>
     public int? Page { get; set; }
 
     /// <summary> Page size </summary>
-    public int? PageSize { get; set; }
+    public int? ResultsPerPage { get; set; }
 
     /// <summary> Custom query filter </summary>
     public Expression<Func<TEntity, bool>>? Filter { get; set; }
 
-    /// <summary> Apply ordering by </summary>
-    public Expression<Func<TEntity, dynamic>>? Sort { get; set; }
-
-    /// <summary> Ordering direction </summary>
-    public ListSortDirection? SortDirection { get; set; }
+    /// <summary> Sort string </summary>
+    /// <example> firstName:asc,age:desc </example>
+    public string? Sort { get; set; }
 }
