# backend/src/BoilerPlate.Data.DTO/Common/Responses/GetAllDto.cs
@@ -9,17 +9,17 @@ public class GetAllDto<TEntityDto> : BaseDto
     where TEntityDto : BaseEntityDto
 {
     /// <summary> Results </summary>
-    public required IEnumerable<TEntityDto> Items { get; set; }
+    public required IEnumerable<TEntityDto> Content { get; set; }
 
     /// <summary> Page number </summary>
     public required int Page { get; set; }
 
-    /// <summary> Take results per page </summary>
-    public required int PageSize { get; set; }
+    /// <summary> Number of results per page </summary>
+    public required int ResultsPerPage { get; set; }
 
     /// <summary> Total items count </summary>
-    public required int TotalItems { get; set; }
+    public required int TotalResults { get; set; }
 
-    /// <summary> Has more results to load </summary>
-    public required bool HasMore { get; set; }
+    /// <summary> Has no more results to load </summary>
+    public required bool IsLast { get; set; }
 }
